Revision history for Gimp-Perl extension.

	- more configuration cleanups
	- fixed Gimp::Fu to respect RUN_WITH_LAST_VALS again
	- added more oo-prefixes to channels and layers (see Gimp::OO)

1.0441 Sat Oct 24 22:52:05 CEST 1998
	- t/run.t does much less when no tests are requested
	- cleaned up Gimp::UI learned much about Gtk (but still not much)
	- an occurence of PARAM_PARASITE wasn't wrapped into an #if-clause.
	  this is just one of the countless braindead bugs being found
	  by schinder@pobox.com and the cpan-testers! Thanks!

1.044 Sat Oct 24 03:54:47 CEST 1998
	- allow PF_PATTERN etc. to be usable as commandline arguments
	- added parasite support -> untested so far
	- Gimp::Fu wasn't calling Gtk->init anymore
	- Gimp/Lib.xs wasn't including config.h, and nobody ever noticed ;)
	- we no longer link against ui-libraries, unless necessary.
	- added <5.005 warning
	- many, many configuration changes and hacks
	- this is now part of the gimp cvs tree
	- changed LIBS by LDLOADLIBS... hacky, but works
	- Gimp::Fu will no longer be traced
	- a run_mode argument at the beginning can now generally be left out
	- re-enabled the testsuite

1.0431 Thu Oct  8 20:01:32 CEST 1998
	- compile fix for gimp-1.0

1.043 Thu Oct  8 07:27:23 CEST 1998
	- allow <None> as menupath
	- added HORIZONTAL, VERTICAL
	- implemented PF_BRUSH, PF_PATTERN and PF_GRADIENT
	- examples/example-fu.pl shows all possible dialog widgets
	- fixed Gimp::Fu::xlfd_size to correctly return the pointsize
	  (rather than pointsize*10)
	- added FG_IMAGE_FILL (and fixed the values of the other FILL
	  constants, which were documented incorrectly)
	- please note that you can upload your perl-scripts to the
	  Gimp-registry now(!!!!). Visit http://registry.gimp.org/
	  and deposit your script ;)

1.042 Mon Oct  5 00:50:04 CEST 1998
	- implemented PF_ADJUSTMENT to aid scm2perl's job, its undocumented
	  and should not be used by new code.
	- fixed a coredump problem when tracing.