@@ -8,9 +8,10 @@ use vars qw($VERSION @ISA @EXPORT @EXPORT_OK $AUTOLOAD %EXPORT_TAGS @EXPORT_FAIL
             @gimp_gui_functions
             $help $verbose $host $gimp_main);
 
+use base qw(DynaLoader);
+
 require DynaLoader;
 
-@ISA = qw(DynaLoader);
 $VERSION = 1.0441;
 
 @_param = qw(
@@ -218,6 +219,8 @@ for(qw(_gimp_procedure_available gimp_call_procedure set_trace)) {
 }
 
 *main = *gimp_main = \&{"${interface_pkg}::gimp_main"};
+*init = *gimp_init = \&{"${interface_pkg}::gimp_init"};
+*end  = *gimp_end  = \&{"${interface_pkg}::gimp_end" };
 
 @PREFIXES=("gimp_", "");
 
@@ -576,6 +579,18 @@ speak for you), or just plain interesting functions.
 
 Should be called immediately when perl is initialized. Arguments are not yet
 supported. Initializations can later be done in the init function.
+
+=item init(), end (), gimp_init(), gimp_end()
+
+These is an alternative and experimental interface that replaces the call to
+gimp_main and the net callback. At the moment it only works for the Net
+interface (L<Gimp::Net>), and not as a native plug-in. Here's an example:
+
+ use Gimp;
+ 
+ Gimp::init;
+ <do something with the gimp>
+ Gimp::end;
 
 =item gimp_install_procedure(name, blurb, help, author, copyright, date, menu_path, image_types, type, [params], [return_vals])
 
